[package]
name = "card-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = "0.11.0"
pathfinder_geometry = "0.5.1"
raqote = { version = "0.8.2", "features" = ["text", "png"] }
ttf-parser = "0.12.3"
ttf_word_wrap = "0.5.0"
